--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,8 @@ body {
 }
 
 .container__section {
-  position: relative;
+  position: sticky;
+  top: 2px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto auto auto auto;
@@ -158,7 +159,7 @@ body {
     "parte4 parte5";
   justify-items: center;
   justify-content: center;
-  align-content: end;
+  align-content: center;
   row-gap: 40px;
 }
 
@@ -169,7 +170,6 @@ body {
 .parte2 {
   grid-area: parte2;
   background-color: #66677774;
-  border: solid #00000091;
   border-radius: 15px;
   padding: 10px;
   box-shadow: #000;
@@ -179,13 +179,11 @@ body {
   grid-area: parte3;
   display: grid;
   place-items: center;
-  text-decoration: underline;
 }
 
 .parte4 {
   grid-area: parte4;
   background-color: #66677774;
-  border: solid #00000091;
   border-radius: 15px;
   padding: 10px;
   box-shadow: #000;
@@ -195,7 +193,6 @@ body {
 .parte5 {
   grid-area: parte5;
   background-color: #66677774;
-  border: solid #00000091;
   border-radius: 15px;
   padding: 10px;
   box-shadow: #000;
