--- a/css/style.css
+++ b/css/style.css
@@ -197,11 +197,10 @@ body {
   padding: 10px;
   box-shadow: #000;
 }
-/*
-.div__content {
-  margin: 20px;
-  margin-top: px;
+
+.div__texto,
+.div__subt {
+  text-align: center;
 }
-*/
 
 @import url("https://fonts.googleapis.com/css2?family=Special+Gothic&display=swap");
