--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,7 @@ body {
   visibility: visible;
 }
 
-.container__section {
-  position: sticky;
-  top: 2px;
+.container .about {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto auto auto auto;
@@ -163,8 +161,28 @@ body {
   row-gap: 40px;
 }
 
+.container .about__header {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.about__title {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
 .parte1 {
   grid-area: parte1;
+  min-height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about__img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%;
 }
 
 .parte2 {
@@ -173,6 +191,7 @@ body {
   border-radius: 15px;
   padding: 10px;
   box-shadow: #000;
+  margin-bottom: 10px;
 }
 
 .parte3 {
@@ -198,8 +217,14 @@ body {
   box-shadow: #000;
 }
 
-.div__texto,
-.div__subt {
+.parte4,
+.parte5 {
+  display: flex;
+  flex-direction: column;
+}
+
+.about__texto,
+.about__subt {
   text-align: center;
 }
 
