--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,8 @@ body {
   visibility: visible;
 }
 
-.container .about {
+.container,
+.about {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto auto auto auto;
@@ -161,11 +162,6 @@ body {
   row-gap: 40px;
 }
 
-.container .about__header {
-  margin-top: 50px;
-  text-align: center;
-}
-
 .about__title {
   font-size: 2.5rem;
   margin-bottom: 20px;
@@ -173,16 +169,10 @@ body {
 
 .parte1 {
   grid-area: parte1;
-  min-height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.about__img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 50%;
+  flex-direction: column;
 }
 
 .parte2 {
@@ -216,13 +206,13 @@ body {
   padding: 10px;
   box-shadow: #000;
 }
-
+/*
 .parte4,
 .parte5 {
   display: flex;
   flex-direction: column;
 }
-
+*/
 .about__texto,
 .about__subt {
   text-align: center;
