--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ body {
 }
 
 /* areas del grid*/
-.parte1 {
+.about__section--parte1 {
   grid-area: parte1;
   display: flex;
   justify-content: center;
@@ -186,7 +186,7 @@ body {
   flex-direction: column;
 }
 
-.parte2 {
+.about__section--parte2 {
   grid-area: parte2;
   background-color: #66677774;
   border-radius: 15px;
@@ -195,13 +195,13 @@ body {
   margin-bottom: 10px;
 }
 
-.parte3 {
+.about__section--parte3 {
   grid-area: parte3;
   display: grid;
   place-items: center;
 }
 
-.parte4 {
+.about__section--parte4 {
   grid-area: parte4;
   background-color: #66677774;
   border-radius: 15px;
@@ -210,7 +210,7 @@ body {
   margin-bottom: 10px;
 }
 
-.parte5 {
+.about__section--parte5 {
   grid-area: parte5;
   background-color: #66677774;
   border-radius: 15px;
