--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ body {
     "boton boton";
   align-content: center;
   align-items: center;
-  justify-content: baseline;
+  justify-content: center;
 }
 
 .design__item--1 {
@@ -363,13 +363,19 @@ body {
 
 .design__btn {
   background-color: rgb(179, 186, 241);
+  border: none;
 }
 
 .design__btn--text {
   color: black;
   text-decoration: none;
   background-color: rgb(179, 186, 241);
-  border-radius: 10%;
+  padding: 10px;
 }
+
+.design__img {
+  text-align: center;
+}
+
 /*fin de modificaciones en designs*/
 @import url("https://fonts.googleapis.com/css2?family=Special+Gothic&display=swap");
