--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body {
     height: 2px;
     background-color: rgba(195, 128, 220, 0.929);
     visibility: hidden;
-    transition: 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
   }
 }
 
