--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,31 @@
 /*@use "../node_modules/bootstrap/scss/bootstrap";*/
 @use "pages";
 
+// style.scss
+
+// 1. Abstracts
+@use "abstracts/variables";
+@use "abstracts/mixins";
+
+// 2. Base
+@use "base/reset";
+@use "base/typography";
+@use "base/base";
+
+// 3. Layout
+@use "layout/header";
+@use "layout/footer";
+
+// 4. Components
+@use "components/navbar";
+@use "components/button"; // o los que tengas
+
+// 5. Pages
+@use "pages";
+
+// 6. Vendors
+@use "../node_modules/bootstrap/scss/bootstrap";
+
 * {
   margin: 0;
   padding: 0;
