--- a/css/style.css
+++ b/css/style.css
@@ -1,400 +1,10 @@
-@charset "UTF-8";
-/*@use "../node_modules/bootstrap/scss/bootstrap";*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+    "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 3 \2502    font-family: $font-main;\d\a   \2502                 ^^^^^^^^^^\a   \2575 \a   scss\\base\\_base.scss 3:16  @use\a   scss\\style.scss 13:1       root stylesheet";
 }
-
-body {
-  color: white;
-  font-family: "Special Gothic", sans-serif;
-}
-
-/*Modificaciones en el Bootstrap para navbar*/
-.navbar {
-  background-color: rgb(179, 186, 241);
-  height: 60px;
-  margin: 20px;
-  border-radius: 16px;
-  padding: 0.5rem;
-}
-
-.navbar-toggler {
-  border: none;
-  font-size: 1.25rem;
-}
-
-.navbar-toggler:focus,
-.btn-close:focus {
-  box-shadow: none;
-  outline: none;
-}
-
-.svg {
-  width: 40px;
-  border-radius: 50%;
-}
-
-.nav-link {
-  color: #666777;
-  font-weight: 500;
-  position: relative;
-}
-
-.nav-link:hover,
-.nav-link:active {
-  color: #000;
-}
-
-/*arreglos para el responsive de navbar*/
-@media (min-width: 991px) {
-  .nav-link::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 2px;
-    background-color: rgba(195, 128, 220, 0.929);
-    visibility: hidden;
-    transition: background-color 0.3s ease-in-out;
-  }
-}
-.nav-link:hover::before,
-.nav-link:active::before {
-  width: 100%;
-  visibility: visible;
-}
-
-/*fin de modificaciones para navbar*/
-/*styles de main*/
-.main {
-  background: url(../images/fondo2.jpg) no-repeat center;
-  background-size: cover;
-  width: 100%;
-}
-
-/*arreglos para el responsive de main*/
-@media (max-width: 1024px) {
-  .main {
-    content: "";
-    background: url(../images/fondo2.jpg) no-repeat center;
-    background-size: cover;
-    width: 100%;
-  }
-}
-.main::before {
-  background-color: rgba(0, 0, 0, 0.6);
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.main .container {
-  height: 100vh;
-  z-index: 1;
-  position: relative;
-}
-
-/*fin styles de main*/
-/*styles de footer*/
-.footer {
-  background-color: rgb(179, 186, 241);
-}
-
-.footer__sec {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 50px;
-  justify-content: space-between;
-  align-content: baseline;
-  color: #000;
-  background-color: rgb(179, 186, 241);
-  height: fit-content;
-  padding: 30px;
-}
-
-.footer__link {
-  text-decoration: none;
-  color: #000;
-  font-weight: 500;
-  position: relative;
-}
-
-.footer__link:hover,
-.footer__link:active {
-  color: #000;
-}
-
-/*arreglos para el responsive de footer*/
-@media (max-width: 1024px) {
-  .footer__link::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 2px;
-    background-color: rgba(195, 128, 220, 0.929);
-    visibility: hidden;
-    transition: 0.3s ease-in-out;
-  }
-}
-.footer__link:hover::before,
-.footer__link:active::before {
-  width: 100%;
-  visibility: visible;
-}
-
-/*fin de styles de footer*/
-/*modificaciones en sobre mi*/
-/* grid de about */
-.container,
-.about {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto auto auto;
-  grid-template-areas: "parte1 parte1" "parte2 parte2" "parte3 parte3" "parte4 parte5";
-  justify-items: center;
-  justify-content: center;
-  align-content: center;
-  row-gap: 40px;
-  font-size: 18px;
-}
-
-.about__title {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-}
-
-/* areas del grid*/
-.about__section--parte1 {
-  grid-area: parte1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.about__section--parte2 {
-  grid-area: parte2;
-  margin-bottom: 10px;
-}
-
-.about__section--parte3 {
-  grid-area: parte3;
-  display: grid;
-  place-items: center;
-}
-
-.about__section--parte4 {
-  grid-area: parte4;
-  margin-bottom: 10px;
-}
-
-.about__section--parte5 {
-  grid-area: parte5;
-}
-
-.about__texto,
-.about__subt {
-  text-align: center;
-}
-
-.container {
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-
-/*modificaciones en proyectos*/
-/* grid de proyectos */
-.projects {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto auto;
-  grid-template-areas: "header header header" "form survey docs";
-  gap: 1rem;
-  justify-content: center;
-  align-content: center;
-}
-
-/* areas del grid */
-.projects__header {
-  grid-area: header;
-  text-align: center;
-}
-
-.projects__item--form {
-  grid-area: form;
-}
-
-.projects__item--survey {
-  grid-area: survey;
-}
-
-.projects__item--docs {
-  grid-area: docs;
-}
-
-.project__img {
-  width: 100%;
-  max-width: 400px;
-  height: 400px;
-  object-fit: cover;
-  border-radius: 10px;
-  border: 2px solid rgba(255, 255, 255, 0.6);
-  transition: transform 0.5s ease-in-out;
-}
-
-.project__img:hover {
-  transform: scale(1.05);
-}
-
-.project__title {
-  color: white;
-  height: 40px;
-  width: 400px;
-  border-radius: 10px;
-  font-size: 18px;
-  margin-top: 20px;
-  text-align: center;
-  padding-top: 10px;
-}
-
-.project__code {
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.project__title:hover .project__code {
-  opacity: 1;
-}
-
-.project__item,
-.project,
-.project__title {
-  text-decoration: none;
-}
-
-/* ajustes para el responsive */
-@media (max-width: 1024px) {
-  /*
-    .projects {
-      position: relative;
-      top: 100px;
-      display: flex;
-      justify-content: space-around;
-      flex-direction: column;
-      align-items: center;
-      align-content: flex-end;
-    }
-  */
-  .projects {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "header header" "form survey" "docs docs";
-  }
-}
-@media (max-width: 600px) {
-  .projects {
-    grid-template-columns: 1fr;
-    grid-template-areas: "header" "form" "survey" "docs";
-  }
-  .project__img {
-    height: auto;
-  }
-}
-/*fin de modificaciones en proyectos*/
-/*modificaciones en designs*/
-.designs {
-  position: sticky;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-areas: "diseño1 texto1" "texto2 diseño2" "boton boton";
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-}
-
-.design__item--1 {
-  grid-area: diseño1;
-}
-
-.design__item--2 {
-  grid-area: texto1;
-}
-
-.design__item--3 {
-  grid-area: diseño2;
-}
-
-.design__item--4 {
-  grid-area: texto2;
-}
-
-.design__item--5 {
-  grid-area: boton;
-}
-
-.design__item {
-  position: relative;
-  top: 100px;
-  text-align: center;
-}
-
-.design__btn {
-  background-color: rgb(179, 186, 241);
-  border: none;
-  margin-bottom: 100px;
-}
-
-.design__btn--text {
-  color: black;
-  text-decoration: none;
-  background-color: rgb(179, 186, 241);
-  padding: 10px;
-}
-
-.design__img {
-  text-align: center;
-}
-
-@media (max-width: 1024px) {
-  .main {
-    font-size: 10px;
-  }
-  .designs {
-    position: sticky;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    align-content: flex-end;
-  }
-  .design__item {
-    position: relative;
-    top: 100px;
-    text-align: center;
-  }
-}
-/*fin de modificaciones en designs*/
-/*modificaciones en contacto*/
-.contact {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  align-content: center;
-  align-items: center;
-  justify-items: center;
-}
-
-/*fin de modificaciones en contacto*/
-
-/*# sourceMappingURL=style.css.map */
