--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,10 +1,3 @@
-.main {
-  background: url("../images/fondo2.jpg") no-repeat center;
-  background-size: cover;
-  width: 100%;
-  position: relative;
-}
-
 @media (max-width: 1024px) {
   .main {
     content: "";
@@ -14,19 +7,24 @@
   }
 }
 
-.main::before {
-  background-color: rgba(0, 0, 0, 0.6);
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 0;
-}
-
-.main .container {
-  height: 100vh;
-  z-index: 1;
+.main {
+  background: url("../images/fondo2.jpg") no-repeat center;
+  background-size: cover;
+  width: 100%;
   position: relative;
+  &::before {
+    background-color: rgba(0, 0, 0, 0.6);
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+  }
+  .container {
+    height: 100vh;
+    z-index: 1;
+    position: relative;
+  }
 }
