--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -12,14 +12,13 @@
 .navbar-toggler {
   border: none;
   font-size: 1.25rem;
+  &:focus {
+    .btn-close:focus {
+      box-shadow: none;
+      outline: none;
+    }
+  }
 }
-
-.navbar-toggler:focus,
-.btn-close:focus {
-  box-shadow: none;
-  outline: none;
-}
-
 .svg {
   width: 40px;
   border-radius: 50%;
