--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -10,7 +10,7 @@
   column-gap: 50px;
   justify-content: space-between;
   align-content: baseline;
-  color: #000;
+  color: vars.$secondary-color;
   background-color: vars.$primary-color;
   height: fit-content;
   padding: 30px;
@@ -18,13 +18,13 @@
 
 .footer__link {
   text-decoration: none;
-  color: #000;
+  color: vars.$secondary-color;
   font-weight: 500;
   position: relative;
 
   &:hover,
   &:active {
-    color: #000;
+    color: vars.$secondary-color;
   }
 }
 /*arreglos para el responsive de footer*/
@@ -37,7 +37,7 @@
     transform: translateX(-50%);
     width: 100%;
     height: 2px;
-    background-color: rgba(195, 128, 220, 0.929);
+    background-color: vars.$footer-color;
     visibility: hidden;
     transition: 0.3s ease-in-out;
   }
