--- a/scss/pages/_designs.scss
+++ b/scss/pages/_designs.scss
@@ -1,3 +1,4 @@
+@use "../abstracts/variables" as vars;
 /*modificaciones en designs*/
 .designs {
   position: sticky;
@@ -40,7 +41,7 @@
 }
 
 .design__btn {
-  background-color: rgb(179, 186, 241);
+  background-color: vars.$primary-color;
   border: none;
   margin-bottom: 100px;
 }
@@ -48,7 +49,7 @@
 .design__btn--text {
   color: black;
   text-decoration: none;
-  background-color: rgb(179, 186, 241);
+  background-color: vars.$primary-color;
   padding: 10px;
 }
 
