--- a/scss/pages/_projects.scss
+++ b/scss/pages/_projects.scss
@@ -1,3 +1,4 @@
+@use "../abstracts/variables" as vars;
 /*modificaciones en proyectos*/
 /* grid de proyectos */
 .projects {
@@ -36,14 +37,14 @@
   height: 400px;
   object-fit: cover;
   border-radius: 10px;
-  border: 2px solid rgba(255, 255, 255, 0.6);
+  border: 2px solid vars.$project-color;
   transition: transform 0.5s ease-in-out;
   &:hover {
     transform: scale(1.05);
   }
 }
 .project__title {
-  color: white;
+  color: vars.$project-color2;
   height: 40px;
   width: 400px;
   border-radius: 10px;
