--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,10 +5,9 @@ $secondary-color: #000;
 $footer-color: rgba(195, 128, 220, 0.929);
 $project-color: rgba(255, 255, 255, 0.6);
 $project-color2: white;
-$main-color: black;
 
 /*fonts*/
 $font-main: "Special Gothic", sans-serif;
 $navbar-radius: 16px;
 
-$main-img: url("../images/fondo2.jpg");
+$main-img: url("/images/fondo2.jpg");
