--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -11,3 +11,8 @@ $font-main: "Special Gothic", sans-serif;
 $navbar-radius: 16px;
 
 $main-img: url("/images/fondo2.jpg");
+
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 1024px;
+$breakpoint-xl: 1280px;
