--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,3 +1,4 @@
+@use "../abstracts/mixins";
 @use "../abstracts/variables" as vars;
 /*styles de footer*/
 .footer {
@@ -28,7 +29,7 @@
   }
 }
 /*arreglos para el responsive de footer*/
-@media (max-width: 1024px) {
+@include mixins.respond-to(lg) {
   .footer__link::before {
     content: "";
     position: absolute;
