--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -8,9 +8,10 @@ $project-color2: white;
 
 /*fonts*/
 $font-main: "Special Gothic", sans-serif;
+
 $navbar-radius: 16px;
 
-$main-img: url("/images/fondo2.jpg");
+$main-img: url("../images/fondo2.jpg");
 
 $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
