arreglando rutas de img

--- a/css/style.css
+++ b/css/style.css
@@ -61,17 +61,8 @@ body {
 }
 
 /*fin de styles de footer*/
-@media (max-width: 1024px) {
-  .main {
-    content: "";
-    background: url("../images/fondo2.jpg") no-repeat center;
-    background-size: cover;
-    width: 100%;
-    z-index: 1;
-  }
-}
 .main {
-  background: url("../images/fondo2.jpg") no-repeat center;
+  background: url("../../images/fondo2.jpg") no-repeat center;
   background-size: cover;
   width: 100%;
   position: relative;
@@ -88,6 +79,17 @@ body {
   height: 100vh;
   z-index: 1;
   position: relative;
+}
+@media (max-width: 1024px) {
+  .main {
+    background-position: top;
+  }
+}
+@media (max-width: 576px) {
+  .main {
+    background-size: contain;
+    padding: 1rem;
+  }
 }
 
 /*Modificaciones en el Bootstrap para navbar*/
