--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -11,7 +11,7 @@ $font-main: "Special Gothic", sans-serif;
 
 $navbar-radius: 16px;
 
-$main-img: url("../images/fondo2.jpg");
+$main-img: url("../../images/fondo2.jpg");
 
 $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
