--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -5,7 +5,7 @@
 // Incluye ajustes responsive para mobile y tablet
 
 .main {
-  background: url(#{vars.$main-img}) no-repeat center;
+  background: url("#{vars.$main-img}") no-repeat center;
   background-size: cover;
   width: 100%;
   position: relative;
