--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -30,7 +30,7 @@
   position: relative;
   &:hover,
   &:active {
-    color: #000;
+    color: vars.$secondary-color;
   }
 
   &:hover::before,
@@ -49,7 +49,7 @@
     transform: translateX(-50%);
     width: 100%;
     height: 2px;
-    background-color: rgba(195, 128, 220, 0.929);
+    background-color: vars.$link-color;
     visibility: hidden;
     transition: background-color 0.3s ease-in-out;
   }
