--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -38,7 +38,7 @@
     transform: translateX(-50%);
     width: 100%;
     height: 2px;
-    background-color: vars.$footer-color;
+    background-color: vars.$link-color;
     visibility: hidden;
     transition: 0.3s ease-in-out;
   }
