--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -2,62 +2,26 @@
 @use "../abstracts/variables" as vars;
 /*modificaciones en contacto*/
 .contact {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(7, 1fr);
-  grid-template-areas:
-    "title img"
-    "form form"
-    "name inp-name"
-    "email inp-email"
-    "messagge messagge"
-    "textarea textarea"
-    "btn btn";
-  align-content: center;
-  align-items: center;
-  justify-items: center;
-  justify-content: center;
-  gap: 1rem;
+  .contact__item {
+    .contact__form {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      align-content: center;
+      gap: 1rem;
+    }
+  }
 }
 
-.contact__title {
-  grid-area: title;
-}
-
-.contact__img {
-  grid-area: img;
-}
-
-.contact__form-legend {
-  grid-area: from;
-}
-
-.contact__label--name {
-  grid-area: name;
-}
-
-.contact__input--name {
-  grid-area: inp-name;
-}
-
-.contact__label--email {
-  grid-area: email;
-}
-
-.contact__input--email {
-  grid-area: inp-email;
-}
-
-.contact__label--message {
-  grid-area: messagge;
-}
-
-.contact__textarea {
-  grid-area: textarea;
+.contact__form-fieldset {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
 }
 
 .contact__btn {
-  grid-area: btn;
+  margin-top: 20px;
   @include mixins.button-style;
 }
 /*fin de modificaciones en contacto*/
