cambios en flex de contact

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 /*colores*/
 
 $primary-color: rgb(179, 186, 241);
-$secondary-color: #000;
+$secondary-color: #0d0c0c;
 $link-color: rgba(195, 128, 220, 0.929);
 $project-color: rgba(255, 255, 255, 0.6);
 $project-color2: white;
