--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
   column-gap: 50px;
   justify-content: space-between;
   align-content: baseline;
-  color: #000;
+  color: #0d0c0c;
   background-color: rgb(179, 186, 241);
   height: fit-content;
   padding: 30px;
@@ -31,12 +31,12 @@ body {
 
 .footer__link {
   text-decoration: none;
-  color: #000;
+  color: #0d0c0c;
   font-weight: 500;
   position: relative;
 }
 .footer__link:hover, .footer__link:active {
-  color: #000;
+  color: #0d0c0c;
 }
 
 /*arreglos para el responsive de footer*/
@@ -122,7 +122,7 @@ body {
   position: relative;
 }
 .nav-link:hover, .nav-link:active {
-  color: #000;
+  color: #0d0c0c;
 }
 .nav-link:hover::before, .nav-link:active::before {
   width: 100%;
@@ -216,6 +216,11 @@ body {
   gap: 1rem;
 }
 
+.contact__img {
+  margin-top: 50px;
+  margin-left: 40px;
+}
+
 .contact__form-fieldset {
   display: flex;
   flex-direction: column;
@@ -225,13 +230,27 @@ body {
 .contact__btn {
   margin-top: 20px;
   background-color: rgb(179, 186, 241);
-  color: #000;
+  color: #0d0c0c;
   padding: 10px 20px;
   border: none;
   border-radius: 8px;
   font-weight: bold;
   transition: background-color 0.3s ease-in-out;
   cursor: pointer;
+}
+
+.contact__textarea, .contact__input {
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
+}
+
+.contact__textarea {
+  padding: 7px;
+}
+
+textarea::placeholder {
+  color: #0d0c0c;
+  font-size: 15px;
 }
 
 /*fin de modificaciones en contacto*/
@@ -275,7 +294,7 @@ body {
 
 .design__btn {
   background-color: rgb(179, 186, 241);
-  color: #000;
+  color: #0d0c0c;
   padding: 10px 20px;
   border: none;
   border-radius: 8px;
